--- a/buteel.html
+++ b/buteel.html
@@ -15,6 +15,7 @@
     <link rel="stylesheet" href="style.css" />
     <link rel="stylesheet" href="buteel.css" />
     <link rel="stylesheet" href="blog.css" />
+    sigma
 
     <!-- JQuery CDN холбоос -->
     <script
