--- a/course-inner.html
+++ b/course-inner.html
@@ -13,7 +13,7 @@
 
     <!-- Гадны CSS -->
     <link rel="stylesheet" href="style.css" />
-    <link rel="stylesheet" href="contact.html" />
+    <link rel="stylesheet" href="contact.css" />
     <link rel="stylesheet" href="course-inner.css" />
 
     <!-- JQuery CDN холбоос -->
