--- a/post.html
+++ b/post.html
@@ -13,7 +13,7 @@
 
     <!-- Гадны CSS -->
     <link rel="stylesheet" href="style.css" />
-    <link rel="stylesheet" href="about.css" />
+    <link rel="stylesheet" href="contact.css" />
     <link rel="stylesheet" href="blog.css" />
 
     <!-- JQuery CDN холбоос -->
