--- a/course-inner.html
+++ b/course-inner.html
@@ -32,7 +32,7 @@
         <ul>
           <i id="menu-close" class="fas fa-times"></i>
 				<li><a href="index.html" >Нүүр Хуудас</a></li>
-				<li><a href="about.html"  > Бүтээлийн танилцуулга</a></li>
+				<li><a href="buteel.html"  > Бүтээлийн танилцуулга</a></li>
 				<li><a href="course-inner.html" class="active">Бидний үзсэн хичээл</a></li>
 				<li><a href="contact.html">Холбоо барих</a></li>
         </ul>
