--- a/buteel.html
+++ b/buteel.html
@@ -12,7 +12,7 @@
     />
 
     <!-- Гадны CSS -->
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="style.cs />
     <link rel="stylesheet" href="buteel.css" />
     <link rel="stylesheet" href="blog.css" />
     <!-- JQuery CDN холбоос -->
