--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 	</head>
 <body>
 	<nav>
-		<img src="img/favicon.ico" class="logo" alt="">
+		<img src="https://nhs.edu.mn/favicon.ico" class="logo" alt="">
 		<p>
 			NEST Education IT school	
 		</p>
@@ -18,9 +18,9 @@
 		<div class="navigation">
 			<ul>
 				<i id="menu-close" class="fas fa-times"></i>
-				<li><a href="index.html" class="active">Нүүр Хуудас</a></li>
-				<li><a href="buteel.html">Бүтээлийн танилцуулга</a></li>
-				<li><a href="course-inner.html">Хичээлийн тухай</a></li>
+				<li><a href="foot.html" class="active">Нүүр Хуудас</a></li>
+				<li><a href="about.html">Бидний тухай</a></li>
+				<li><a href="courses.html">Бүтээлийн танилцуулга</a></li>
 				<li><a href="contact.html">Холбоо барих</a></li>
 			</ul>
 
@@ -203,9 +203,9 @@
 		<p>Манай багийн бүрэлдэхүүн</p>
 		<div class="expert-box">
 			<div class="profile">
-				<img src="img/pro1.webp" alt="">
-				<h6>BAT </h6>
-				<p>C programming & Ardiuno Expert</p>
+				<img src="https://preview.redd.it/always-thought-iden-versio-was-a-cool-character-she-should-v0-er0pbo7l69hd1.jpeg?auto=webp&s=139362d8879c21fd7123fdbd5861019b65f9220a" class="pp1" alt="">
+				<h6>Номундарь </h6>
+				<p>Дизайн, угсралт, видео бичлэг.</p>
 				<div class="pro-links">
 					<i class="fab fa-facebook"></i>
 					<i class="fab fa-instagram"></i>
@@ -214,9 +214,9 @@
 			</div>
 
 			<div class="profile">
-				<img src="img/pro2.webp" alt="">
-				<h6>DORJ</h6>
-				<p>Web Site Designer</p>
+				<img src="https://i.pinimg.com/474x/51/e3/7c/51e37c2b688170cdc07888eba287bfd1.jpg" class="pp1" alt="">
+				<h6>Тэнүүн</h6>
+				<p>Угсралт, биежүүлэлт, биеийн хүчний ажил.</p>
 				<div class="pro-links">
 					<i class="fab fa-facebook"></i>
 					<i class="fab fa-instagram"></i>
@@ -225,9 +225,9 @@
 			</div>
 
 			<div class="profile">
-				<img src="img/pro3.webp" alt="">
-				<h6>Dondog</h6>
-				<p>HTML, CSS expert</p>
+				<img src="https://gregkrivac.com/cdn/shop/files/Star-Wars-Series1-DarthRevan-12x18-AUG2024-wtrmkd_2048x.jpg?v=1724379126" class="pp1" alt="">
+				<h6>Чинбаяр</h6>
+				<p>Вебсайт, код, холболт.</p>
 				<div class="pro-links">
 					<i class="fab fa-facebook"></i>
 					<i class="fab fa-instagram"></i>
@@ -236,9 +236,9 @@
 			</div>
 
 			<div class="profile">
-				<img src="img/pro4.webp" alt="">
-				<h6>Dulmaa</h6>
-				<p>Document Expert</p>
+				<img src="https://media.disneylandparis.com/d4th/en-int/images/n037183_2025feb27_world_the-mandalorian-grogu-characters-discoveryland_1-1_tcm787-271020.jpg" class="pp1" alt="">
+				<h6>Маргад</h6>
+				<p>Угсралт, биежүүлэлт, дизайн.</p>
 				<div class="pro-links">
 					<i class="fab fa-facebook"></i>
 					<i class="fab fa-instagram"></i>
@@ -250,7 +250,8 @@
 	<!-- Footer section starts from here -->
 	
 	<footer>
-		
+		<img src="https://nhs.edu.mn/favicon.ico" class="logo" alt="">
+    	<p>© 2024 | Nest Education IT School | V.2.1</p>
 	</footer>
 	<!-- Footer section ends from here -->
 
