--- a/contact.html
+++ b/contact.html
@@ -13,8 +13,7 @@
 
     <!-- External CSS -->
     <link rel="stylesheet" href="style.css" />
-    <link rel="stylesheet" href="about.css" />
-
+    <link rel="stylesheet" href="buteel.css" />
     <link rel="stylesheet" href="contact.css" />
 
     <!-- JQuery CDN link -->
@@ -37,7 +36,7 @@
           <i id="menu-close" class="fas fa-times"></i>
           <li><a href="index.html" >Нүүр Хуудас</a></li>
           <li><a href="buteel.html">Бүтээлийн танилцуулга</a></li>
-          <li><a href="course-inner.html">Хичээлийн тухай</a></li>
+          <li><a href="course-inner.html">Бидний үзсэн хичээл</a></li>
           <li><a href="contact.html" class="active">Холбоо барих</a></li>
         </ul>
 
@@ -45,12 +44,12 @@
       </div>
     </nav>
     <section id="about-home">
-      <h2>Contact Us/</h2>
+      <h2>Холбоо барих</h2>
     </section>
 
     <section id="contact">
       <div class="getin">
-        <h2>Холбоо барих</h2>
+        <h2>Холбогдох</h2>
         <p>
           Тусламж хэрэгтэй байна уу? Холбоо барих хэсгийг бөглөж, бидэнтэй холбогдоорой.
         </p>
@@ -124,7 +123,51 @@
       ></iframe>
     </section>
 
-    
+<footer>
+  <div class="footer-container">
+    <div class="footer-left">
+      <img src="https://nhs.edu.mn/favicon.ico" class="logo" alt="Nest Logo">
+      <div class="footer-social">
+        <a href="#"><i class="fab fa-facebook-f"></i></a>
+        <a href="#"><i class="fab fa-instagram"></i></a>
+        <a href="#"><i class="fab fa-youtube"></i></a>
+        <a href="#"><i class="fab fa-linkedin-in"></i></a>
+        <a href="#"><i class="fab fa-dribbble"></i></a>
+        <a href="#"><i class="fas fa-code-branch"></i></a>
+      </div>
+      <p class="copyright">© 2024 | Nest Education IT School | V.2.1</p>
+    </div>
+
+    <div class="footer-right">
+      <div class="footer-item">
+        <i class="fas fa-envelope"></i>
+        <a href="mailto:contact@nhs.edu.mn">contact@nhs.edu.mn</a>
+      </div>
+      <div class="footer-item">
+        <i class="fas fa-phone"></i>
+        <div>
+          <a href="tel:77995555">7799-5555</a><br>
+          <a href="tel:77994444">7799-4444</a>
+        </div>
+      </div>
+      <div class="footer-item">
+        <i class="fas fa-clock"></i>
+        <div>
+          Даваа - Баасан 10:00 - 16:00,<br>
+          Бямба - Ням: Амарна
+        </div>
+      </div>
+      <div class="footer-item">
+        <i class="fas fa-map-marker-alt"></i>
+        <div>
+          Нэст Эдүкэйшн сургуулийн байр<br>
+          Оюутны гудамж, 8-р хороо, Сүхбаатар дүүрэг,<br>
+          Улаанбаатар хот
+        </div>
+      </div>
+    </div>
+  </div>
+</footer>
 
     <script>
       // Show menu links on burger click
