--- a/course-inner.html
+++ b/course-inner.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Бидний үзсэн хичээл</title>
+    <title>Бүтээлийн явц</title>
 
     <!-- Font Awesome CDN холбоос -->
     <link
@@ -32,8 +32,8 @@
         <ul>
           <i id="menu-close" class="fas fa-times"></i>
 				<li><a href="index.html" >Нүүр Хуудас</a></li>
-				<li><a href="about.html"  > Бүтээлийн танилцуулга</a></li>
-				<li><a href="course-inner.html" class="active">Бидний үзсэн хичээл</a></li>
+				<li><a href="buteel.html"  > Бүтээлийн танилцуулга</a></li>
+				<li><a href="course-inner.html" class="active">Бүтээлийн явц</a></li>
 				<li><a href="contact.html">Холбоо барих</a></li>
         </ul>
 
@@ -43,33 +43,44 @@
    
 
     <section id="about-home">
+    
       <h2>Хичээлээ үзээд чадвараа сайжруул</h2>
     </section>
    
-    <section id="course-inner">
-      <div class="overview">
-        <img class="course-img" src="img/c1.jpg" alt="" />
+<section id="course-inner">
+  <div class="overview">
 
-        <div class="course-head">
-          <div class="c-name">
-            <h2>App inventor хичээлийн тухай</h2>
+    <div class="video-wrapper">
+      <iframe
+        src="https://www.youtube.com/embed/iSRPKGRRG9k"
+        title="Star Wars Team"
+        frameborder="0"
+        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+        referrerpolicy="strict-origin-when-cross-origin"
+        allowfullscreen
+      ></iframe>
+    </div>
 
-            <div class="star">
-              <i class="fa-solid fa-star"></i>
-              <i class="fa-solid fa-star"></i>
-              <i class="fa-solid fa-star"></i>
-              <i class="fa-solid fa-star"></i>
-              <i class="fa-solid fa-star"></i>
-            </div>
+    <div class="course-head">
+      <div class="c-name">
+        <h2>Бидний хийсэн явцын бичлэг</h2>
 
-            <p>Тайлбар хэсэг</p>
-          </div>
-          <span>млй мой</span>
+        <div class="star">
+          <i class="fa-solid fa-star"></i>
+          <i class="fa-solid fa-star"></i>
+          <i class="fa-solid fa-star"></i>
+          <i class="fa-solid fa-star"></i>
+          <i class="fa-solid fa-star"></i>
         </div>
+
+        <p>Үнэлгээ</p>
+      </div>
+      <span></span>
+    </div>
 
         <h3>Багш</h3>
         <div class="tutor">
-          <img src="img/c4.jpg" alt="" />
+          <img src="https://media.discordapp.net/attachments/1346089005531402261/1370435329688993834/bagsh.png?ex=681f7cdc&is=681e2b5c&hm=1ac5ef521518e573e49f74e3280d87f087eaf011be3435d4317c4eeef8acc727&=&format=webp&quality=lossless&width=407&height=350" alt="" />
           <div class="tutor-det">
             <h5>Батмөнх</h5>
             <p>IoT </p>
@@ -78,25 +89,28 @@
 
         <hr />
 
-        <h3>Хичээлийн сэтгэгдэлүүд</h3>
+        <h3>Бүтээл хийсэн сэтгэгдэл</h3>
 
-        <p>Гайхалтай хичээл</p>
+        <p>Номундарь:Хэцүү ч бид шантрах ёсгүй. </p>
         <br />
-        <p>Гайхалтай хичээл</p>
+        <p>Маргад:Гоё хөгжилтэй байсан. 
+        </p>
         <br />
-        <p>Гайхалтай хичээл</p>
+        <p>Чинбаяр:Аййймаар ядаргаатай байсан. </p>
+        <br />
+        <p>Тэнүүн:Муу баг гэж үгүй. Муу удирдагч л байдаг.</p>
 
         <hr />
 
-        <h3>Та юу сурах вэ</h3>
+        <h3>Бид юу сурсан:</h3>
 
         <div class="learn">
-          <p><i class="far fa-check-circle"></i> Эдгээр зүйлсийг сурна.</p>
-          <p><i class="far fa-check-circle"></i> Эдгээр зүйлсийг сурна.</p>
-          <p><i class="far fa-check-circle"></i> Эдгээр зүйлсийг сурна.</p>
-          <p><i class="far fa-check-circle"></i> Эдгээр зүйлсийг сурна.</p>
-          <p><i class="far fa-check-circle"></i> Эдгээр зүйлсийг сурна.</p>
-          <p><i class="far fa-check-circle"></i> Эдгээр зүйлсийг сурна.</p>
+          <p><i class="far fa-check-circle"></i> Сэрво мотор хөдөлгөж сурна.</p>
+          <p><i class="far fa-check-circle"></i> Ардуйно уног яаж ашиглахыг сурна.</p>
+          <p><i class="far fa-check-circle"></i> Код бичиж сурна.</p>
+          <p><i class="far fa-check-circle"></i> Бүлүтүүтээр холбож сурна.</p>
+          <p><i class="far fa-check-circle"></i> Зөв төлөвлөлт.</p>
+          <p><i class="far fa-check-circle"></i> Хичээл зүтгэл.</p>
 
           <div class="enroll-btn">
             <a href="#" class="blue">Хичээл үзэх</a>
@@ -107,19 +121,19 @@
       <div class="enroll">
         <h3>Энэ бүтээлээр:</h3>
 
-        <p><i class="fa-solid fa-video"></i> Хичээлийн цаг дээрх</p>
-        <p><i class="fa-solid fa-newspaper"></i> бабаөаө</p>
-        <p><i class="fa-solid fa-download"></i> өброхөобхөб</p>
-        <p><i class="fa-solid fa-key"></i> абөабө</p>
+        <p><i class="fa-solid fa-video"></i> Номундарь</p>
+        <p><i class="fa-solid fa-newspaper"></i> Чинбаяр</p>
+        <p><i class="fa-solid fa-download"></i> Тэнүүн </p>
+        <p><i class="fa-solid fa-key"></i> Маргад</p>
 
         <div class="enroll-btn">
-          <a href="#" class="blue">Хичээл үзэх</a>
+          <a href="#" class="blue">оролцсон</a>
         </div>
       </div>
     </section>
     <!-- Course body section starts -->
 
-   
+
     <script>
       // Show menu links on burger click
       $("#menu-btn").click(function () {
